# pcl_ros_learning

./: CMakeLists.txt  README.md  package.xml
pcldata/data/: object_templates.txt  table_scene_mug_stereo_textured_hull.pcd
src/: pcl_cloud_ransac_withoutros.cpp  pcl_cloud_view_without_ros.cpp  pcl_cloud_view_without_ros_rgb.cpp  pcl_cloud_viewimage_without_ros.cpp  pcl_kd_tree_ros.cpp  pcl_oct_tree_without_ros_simple.cpp  pcl_plotter_without_ros.cpp  pcl_resampling_withoutros.cpp  pcl_test_node.cpp  pcl_vis_demo_withoutros.cpp
src/chapter11/: pairwise_incremental_registration.cpp  template_alignment.cpp
src/chapter13/: bspline_fitting.cpp  resampling.cpp
src/chapter6/: statistical_removal.cpp
src/chapter7/: greedy_projection.cpp
src/chapter8/: correspondence_grouping.cpp  harris.cpp  narf_keypoint_extraction.cpp  sift_keypoint.cpp
